--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 /* Customize your main colors in :root variables */
 :root {
-  --main-background-color: #343A50;
-  --card-background-color: #51576D;
+  --main-background-color: #93d3fb;
+  --card-background-color: #e7f5fe;
   --card-background-lighter-color: #7A7F92;
-  --main-text-color:#F7F6F4;
-  --title-text-color:#3CBA8B;
+  --main-text-color:black;
+  --title-text-color:white;
+  --list-title-text-color:black;
+  --secondary-attribute-color:#93d3fb;
 }
 
 body{
